--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -4,41 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" data-th-href="@{/assets/css/style.css}">
+    <link rel="stylesheet" data-th-href="@{/assets/css/detail.css}">
     <title>Détails de l'article</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+2OrX6o6pBMz5XyY6Dgi1OdX1G7fAWLa/8gK+6U" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-
-        .container {
-            margin-top: 50px;
-        }
-
-        .card {
-            border: none;
-            border-radius: 15px;
-            box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-        }
-
-        .card-header {
-            background-color: #007bff;
-            color: white;
-            border-radius: 15px 15px 0 0;
-        }
-
-        .card-body {
-            padding: 30px;
-        }
-
-        .form-label {
-            font-weight: bold;
-        }
-    </style>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-
-	<div th:replace="~{fragment/fragment-entete :: frag-entete}"></div>
+	<div class="container-fluid">
+   		<div th:replace="~{fragment/fragment-entete :: frag-entete}"></div>
+   
+<main>
 <div class="container">
 	
     <div class="card mx-auto" style="max-width: 600px;">
@@ -76,10 +50,14 @@
                     <textarea id="idDescription" class="form-control" cols="60" rows="3" th:text="${article.description}" ></textarea>
                 </div>
             </form>
+              
         </div>
     </div>
 </div>
+</main>
+</div>
+</body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-KyZWxNojGGClvKoMSmZmTQuoNjw5vcWrK/KL6QfiqKvQAGUp/+OE1HJsswoy2t/J" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
