--- a/src/main/resources/templates/articleVente.html
+++ b/src/main/resources/templates/articleVente.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <div class="container-fluid">
+		 <div th:replace="~{fragment/fragment-entete :: frag-entete}"></div>
 <!-- Header -->
-        <header>
-            <div class="header-title text-center">Eni - Enchères</div>
-        </header>
+       
 
 <!-- Formulaire création de profil -->
     <div class="container">
@@ -28,13 +27,13 @@
                 <input type="text" class="form-control" id="idNomArticle" th:field="*{nomArticle}">
 	            <div th:replace="~{fragment/fragment-error :: frag-error('nomArticle')}"></div>   				
             </div>
-            
+
             <div class="col-md-6">
                 <label for="idDescription" class="form-label">Description :</label>
                 <input type="text" class="form-control" id="idDescription" th:field="*{description}" required>
                 <div th:replace="~{fragment/fragment-error :: frag-error('description')}"></div>
             </div>
-            
+
             
             <div class="col-md-6">
 	    		<label for="idCategorieArticle" class="form-label">Catégorie :</label>
@@ -89,7 +88,7 @@
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
             <div class="button">
                 <button class="btn btn-primary me-2 center-block" type="submit">Enregistrer</button>
-                <button class="btn btn-secondary center-block" type="button">Annuler</button>
+                <a th:href="@{/}" class="btn btn-secondary center-block">Annuler</a>
             </div>
         </form>
     </div>
