--- a/src/main/resources/templates/fragment/fragment-errors.html
+++ b/src/main/resources/templates/fragment/fragment-errors.html
@@ -1,3 +1,3 @@
-<div th:fragment="frag-errors" th:if="${#fields.hasErrors('*')}">
-	<p class="error">Des erreurs de saisie ont été détectées</p>
+<div class="error-message" th:fragment="frag-errors" th:if="${#fields.hasErrors('*')}">
+	<p class="error-message">Des erreurs de saisie ont été détectées</p>
 </div>
