--- a/src/main/resources/templates/profilModification.html
+++ b/src/main/resources/templates/profilModification.html
@@ -13,6 +13,7 @@
 <body>
 	<div class="container-fluid">
 		<!-- Header -->
+		<main>
 		<header>
 			<div class="header-title text-center">Eni - Enchères</div>
 		</header>
@@ -113,13 +114,15 @@
 						</div>
 					</div>
 				</div>
-				<div class="row justify-content-center mt-2">
-					<div class="col-md-6 text-center">
-						<button class="btn btn-primary me-2" type="submit">Enregistrer</button>
+				<div class="row justify-content-center mt-2 mb-4">
+					<div class="col-md-10 text-center">
+						<button class="btn btn-primary me-1 " type="submit">Enregistrer</button>
 						<a th:href="@{/supprimer(noUtilisateur=${utilisateur.noUtilisateur})}"><button class="btn btn-secondary" type="button">Supprimer</button></a>
+						<a th:href="@{/}"><button class="btn btn-secondary" type="button">Annuler</button></a>
 					</div>
 				</div>
 		</div>
+		</main>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 			crossorigin="anonymous"></script>
