--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,15 @@
             <div class="container">
                 
                 <h1 class="text-center mt-5">Liste des Enchères</h1>
+                
+                <!--<div class="col-md-6">
+				    <label for="idCategorieArticle" class="form-label">Catégorie :</label>
+				    <select class="form-control" id="idCategorieArticle" name="categorieArticle">
+				        <option selected disabled>Sélectionnez une catégorie</option>
+				        <option th:each="categorie : ${categorieSession}" th:value="${categorie.noCategorie}" th:text="${categorie.libelle}"></option>
+   					 </select>
+				</div>-->
+
 
                 <table class="table">
 				    <thead>
@@ -24,83 +33,22 @@
 				            <th>Prix</th>
 				            <th>Fin de l'enchère</th>
 				            <th>Vendeur</th>
-				            <th>Actions</th>
+				            <th sec:authorize="isAuthenticated()">Actions</th>
 				        </tr>
 				    </thead>
 				    <tbody>
 				        <tr th:each="article : ${article}">
 				            <td th:text="${article.nomArticle}">Nom de l'article</td>
-				            <td th:text="${article.prixVente}">Prix</td>
+				            <td th:text="${article.MiseAPrix}">Prix</td>
 				            <td th:text="${article.dateFinEncheres}">Fin de l'enchère</td>
 				            <td th:text="${article.vendeur.pseudo}">Vendeur</td>
 				            <td>
-				                <a th:href="@{'/details/' + ${article.noArticle}}" class="btn btn-primary">Détails</a>
+				                <a th:href="@{'/details/' + ${article.noArticle}}" class="btn btn-primary" sec:authorize="isAuthenticated()">Détails</a>
 				            </td>
 				        </tr>
 				    </tbody>
 				</table>
-
-
-
-                <div class="row row-cols-1 row-cols-md-4 g-4">
-                    <!-- Cards -->
-                    <!-- You can add your card elements here -->
-                </div>
-
-            </div>
-            
-            <div class="row mt-4 row-cols-1 row-cols-md-4 g-4">
-                <div class="col">
-                    <div class="card text-bg-primary">
-                    <img src="/assets/images/PC-Portable-Gaming.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Pc Portable Gaming - 3 écrans</h5>
-                            <p class="card-text">Prix : 1350 points</p>
-                            <p class="card-text">Fin de l'enchère : 22/06/2024</p>
-                            <p class="card-text">Vendeur : Fake Asus</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card text-bg-primary">
-                    <img src="/assets/images/bouclier-de-brennus.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Bouclier de Brennus</h5>
-                            <p class="card-text">Prix : 15 350 points</p>
-                            <p class="card-text">Fin de l'enchère : 01/04/2024</p>
-                            <p class="card-text">Vendeur : Cats Eyes</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card text-bg-primary">
-                    <img src="/assets/images/pop_pikachu.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Funko Pop - Pika vénère</h5>
-                            <p class="card-text">Prix : 350 points</p>
-                            <p class="card-text">Fin de l'enchère : 10/05/2024</p>
-                            <p class="card-text">Vendeur : La Team Rocket</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card text-bg-primary">
-                    <img src="/assets/images/table-bois-salle-a-manger-hemisphere-sud.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Table salle à manger en bois véritable</h5>
-                            <p class="card-text">Prix : 2 350 points</p>
-                            <p class="card-text">Fin de l'enchère : 18/03/2024</p>
-                            <p class="card-text">Vendeur : Rintintin</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </main>
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
