second html et css

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-.text-bg-primary {
+/* .text-bg-primary {
     color: #fff;
     background-color: #007bff;
-}
+} */
 
 .header-title {
     font-size: 2rem;
